--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@ body{
     height: 100vh;
     display: flex;
     align-items: center;
-  
     justify-content: center;
     background-color: rgba(0, 0, 0, 1);
+    color: white;
 
 }
 
