--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,31 @@
 body{
     width: 100vw;
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: rgba(0, 0, 0, 1);
     color: white;
 
 }
+}
+.exercise{
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    text-transform: capitalize;
+    border: 1px solid white ;
+    border-radius: 10px;
+    padding: auto;
+    margin:20px 10px 20px 50px;
+}
+.exercise:hover{
+    transform:  scale(1.06);
+    opacity: 0.6;
+}
+
+a:hover{
+  
+    transform: scale(1.05);
+    color: #FD9D00;
+
+}
+
 
