--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
     text-transform: capitalize;
     border: 1px solid white;
     border-radius: 10px;
-    padding: auto;
+    padding: 70px;
     margin:20px 10px 20px 50px;
 }
 
